# renderrob

./: .gitignore  .rr.settings  .rr_cache  .sync.json  Documentation.md  ERRORCACHE  LICENSE  Readme.md  __init__.py  americana_test.rrp  americana_test2.rrp  americana_test3.rrp  animation_test.rrp  appmap.yml  bla.rrp  build_protobuf.py  custom_commands.py  dialogs.py  dropwidget.py  experiment.py  local_state.py  main.py  main.pyw  main_window.py  main_window.pyw  path_utils_test.py  print_utils.py  pyproject.toml  pysidedeploy.spec  render_job.json  render_job.py  render_job_to_rss.py  render_job_to_rss_test.py  render_rob_state.py  render_settings_setter.py  render_settings_setter_test.py  renderrob.py  renderrob.pyw  renderrob_test.py  renderscript.py  (+30 more)
.github/workflows/: install.sh  linux_test_and_build.yaml  linux_test_and_build.yml  pylint.yml  unittest.yml  win_mac_build.yml  windows_mac_build.yaml
img/archive/: ascii_art_camera.txt
img/documentation/: docu.afphoto  docu.afphoto~lock~  docu.afpub
img/marketing/: blendernation_deck.afpub  renderbob_icon.afdesign  square_icon.afpub
img/marketing/archive/: ascii-art.txt  ascii_art_base.afdesign  renderbob_icon_02.afdesign
proto/: build_proto.sh  cache.proto  cache_pb2.py  state.proto  state_pb2.py
protos/: build_proto.sh  state.proto
src/: ascii-art.txt  custom_commands.py  experiment.py  main.py  mykey.json  path_utils_test.py  render_job_to_rss.py  render_settings_setter_test.py  renderrob_test.py  requirements.txt  rr_gspread.py  rr_image.py  rr_image_l.py  rr_master.py  rr_print_utils.py  rr_renderscript.py  rr_user_commands.py  service_account.json  settings_window.py  shot_name_builder.py  shot_name_builder_test.py  signing.py  state_saver.py  state_saver_test.py  table_utils_test.py  test.py  test2.py  version.py
src/icon/: icon.icns
src/install/: packages
src/key/: renderrob.json
src/protos/: build_proto.sh
src/renderrob.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ui/: settings.ui  window.ui
src/ui/icons/: source.md
src/user/: rr_user_commands.py  rr_user_commands_mist_rendering.py
src/util/: ERRORCACHE  rr_c_image.py  rr_denoisescript.py  rr_errorcache.py  rr_renderscript.py  sheetname.ini
src/utils_bpy/: render_settings_setter.py  settings_loader.py
src/utils_common/: rr_c_image.py
src/utils_rr/: dropwidget.py  path_utils.py  table_utils.py  ui_utils.py
test/: basic_state.rrp  cube.blend  my_project.rrp  openexr.py
test/input/: basic_state.rrp
test/testproject/3d/: shot_02.flamenco.blend
test_data/: state.json
tools/: FindMachO.sh  build_mac.sh  cx_freeze.bat  entitlements.plist  mac_build_and_sign.sh  py2app_and_sign.sh  py2app_setup.py  py2appsigner_settings.sh  pyinstaller.bat  pysidedeploy_linux.spec  pysidedeploy_mac.spec  pysidedeploy_win.spec  renderrob.desktop  setup.py  sign_all.py  sign_app_chatgpt.sh  sign_binaries.sh  sign_native_code.sh  signing.py.txt
ui/: settings.ui  window.ui
util/: rr_c_image.py  rr_image.py
utils/: blocker.py  dropwidget.py  path_utils.py  placeholder_delegate.py  print_utils.py  table_utils.py  table_utils_test.py  ui_utils.py
utils_bpy/: render_settings_setter.py  settings_loader.py
utils_common/: print_utils.py
utils_rr/: mac_helper.py  path_utils.py  placeholder_delegate.py  table_utils.py  ui_utils.py
